--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ hydra-submitit-launcher = "^1.1.6"
 numpy = "^1.23.1"
 wandb = "^0.12.21"
 mlflow = "^1.27.0"
+fsspec = "^2022.7.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
